# TEN-Agent

./: .dockerignore  .env.example  .env.sample  .gitattributes  .gitignore  .gitmodules  .pylintrc  Dockerfile  Dockerfile_dev  Makefile  README-CN.md  README.md  README_EXPLORE.md  TODO.md  Taskfile.yml  astra-architecture.md  astra-service.md  cli_doc.md  docker-compose.yml  docker-compose.yml.example  install_cli.sh  pyrightconfig.json  ten
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: build-docker.yaml  ci.yaml  docker-image.yml
agents/: .clang-format  .gitignore  Taskfile.yml  go.mod  main.go  main.py  manifest-lock.json  manifest.json  manifest.json.cn.bedrock.example  manifest.json.cn.example  manifest.json.cn.openai.example  manifest.json.elevenlabs.example  manifest.json.en.bedrock.example  manifest.json.en.example  manifest.json.en.transcribe.example  manifest.json.example  manifest.json.qwen  manifest.json.qwen.example  property.json  property.json.example  property.json.graphs_examples  start
agents/addon/extension/azure_tts/include/microsoft/cxx_api/: CMakeLists.txt  azac_api_cxx_common.h  speechapi_cxx.h  speechapi_cxx_audio_config.h  speechapi_cxx_audio_data_stream.h  speechapi_cxx_audio_processing_options.h  speechapi_cxx_audio_stream.h  speechapi_cxx_audio_stream_format.h  speechapi_cxx_auto_detect_source_lang_config.h  speechapi_cxx_auto_detect_source_lang_result.h  speechapi_cxx_class_language_model.h  speechapi_cxx_common.h  speechapi_cxx_connection.h  speechapi_cxx_connection_eventargs.h  speechapi_cxx_connection_message.h  speechapi_cxx_connection_message_eventargs.h  speechapi_cxx_conversation.h  speechapi_cxx_conversation_transcriber.h  speechapi_cxx_conversation_transcription_eventargs.h  speechapi_cxx_conversation_transcription_result.h  speechapi_cxx_conversation_translator.h  speechapi_cxx_conversation_translator_events.h  speechapi_cxx_conversational_language_understanding_model.h  speechapi_cxx_dialog_service_config.h  speechapi_cxx_dialog_service_connector.h  speechapi_cxx_dialog_service_connector_eventargs.h  speechapi_cxx_embedded_speech_config.h  speechapi_cxx_enums.h  speechapi_cxx_event_logger.h  speechapi_cxx_eventargs.h  speechapi_cxx_eventsignal.h  speechapi_cxx_eventsignalbase.h  speechapi_cxx_file_logger.h  speechapi_cxx_grammar.h  speechapi_cxx_grammar_list.h  speechapi_cxx_grammar_phrase.h  speechapi_cxx_hybrid_speech_config.h  speechapi_cxx_intent_recognition_eventargs.h  speechapi_cxx_intent_recognition_result.h  speechapi_cxx_intent_recognizer.h  (+61 more)
agents/examples/default/: manifest.json  property.json
agents/examples/demo/: manifest.json  property.json
agents/examples/experimental/: manifest.json  property.json
agents/examples/huggingface/: manifest.json  property.json
agents/examples/minimax_v2v/: property.json
agents/scripts/: .gitignore  BUILD.gn  dot.py  install_deps_and_build.sh  package.sh  pylint.sh
agents/ten_packages/extension/azure_tts/: BUILD.gn  manifest.json
agents/ten_packages/extension/azure_tts/src/: log.h  main.cc  tts.cc  tts.h
agents/ten_packages/extension/buf2msg/: BUILD.gn  README.md  __init__.py  addon.py  extension.py  log.py  manifest.json
agents/ten_packages/extension/coze_python_async/: BUILD.gn  README.md  __init__.py  addon.py  coze.py  extension.py  log.py  manifest.json  property.json  requirements.txt
agents/ten_packages/extension/example_tool_python/: BUILD.gn  __init__.py  addon.py  extension.py  log.py  manifest.json
agents/ten_packages/extension/fashionai/: BUILD.gn  README.md  __init__.py  manifest.json  requirements.txt
agents/ten_packages/extension/fashionai/src/: addon.py  extension.py  fashionai_client.py  log.py
agents/ten_packages/extension/minimax_tts_python/: BUILD.gn  __init__.py  addon.py  extension.py  log.py  manifest.json  minimax_tts.py
agents/ten_packages/extension/minimax_tts_python/tests/: conftest.py  test_basic.py
aibum/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
aibum/src/: middleware.ts
aibum/src/app/: layout.tsx  page.tsx
aibum/src/common/: constants.ts  hooks.ts  request.ts  storage.ts  utils.ts
bedrock_llm/: bedrock_llm_extension.go
demo/: .env  .gitignore  Dockerfile  README.md  bun.lockb  components.json  next.config.mjs  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  tsconfig.json
demo/src/: middleware.tsx
docs/: astra-architecture.md  message-type-and-name.md  rte-schema.md
docs/readmes/: README-CN.md  README-ES.md  README-FR.md  README-IT.md  README-JP.md  README-KR.md
docs/troubleshooting/: troubleshooting-cn.md
docs/tutorials/: extension-tutorial-cpp-cn.md  extension-tutorial-go-cn.md
esp32-client/: CMakeLists.txt  README.cn.md  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.old
esp32-client/components/: .gitignore
esp32-client/main/: CMakeLists.txt  Kconfig.projbuild  ai_agent.c  ai_agent.h  app_config.h  audio_proc.c  audio_proc.h  common.h  llm_main.c  rtc_proc.c  rtc_proc.h  video_proc.c  video_proc.h
frontend/: .dockerignore  .gitignore  package.json  tsconfig.json
frontend/src/: middleware.tsx
markdowns/: astra-architecture.md  message-type-and-name-cn.md  message-type-and-name.md  rte-api.md  rte-schema-cn.md
markdowns/code-of-conduct/: contributing.md
markdowns/readmes/: README-CN.md
markdowns/tutorials/: extension-tutorial-cpp.md  extension-tutorial-go.md
playground/: .dockerignore  .env  .env.example  .gitignore  .prettierrc.json  Dockerfile  LICENSE  Makefile  README.md  bun.lockb  components.json  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  新增用户登陆功能.md
playground/src/: middleware.tsx
server/: README.md  Taskfile.yml  go.mod  go.sum  main.go
server/internal/: code.go  config.go  http_client.go  http_server.go  manifest.go  middleware.go  utils.go  worker.go
(+988 files in other folders)
