#
#
# Agora Real Time Engagement
# Created by Wei Hu in 2022-11.
# Copyright (c) 2024 Agora IO. All rights reserved.
#
#
import("//exts/rte/base_options.gni")
import("//exts/rte/rte_package.gni")

config("common_config") {
  defines = common_defines
  include_dirs = common_includes
  cflags = common_cflags
  cflags_c = common_cflags_c
  cflags_cc = common_cflags_cc
  cflags_objc = common_cflags_objc
  cflags_objcc = common_cflags_objcc
  libs = common_libs
  lib_dirs = common_lib_dirs
  ldflags = common_ldflags
}

# NOTE:
# 
# This file is only used to build all C++ extensions automatically, the 
# `build_type` can not be `executable`.

rte_package("default_app_cpp") {
  package_type = "develop"  # develop | release
  package_kind = "app"

  manifest = "manifest.json"
  property = "property.json"

  if (package_type == "develop") {
    # It's 'develop' package, therefore, need to build the result.
    build_type = "shared_library"

    sources = []

    include_dirs = [
      "//include",
      "//include/utils",
      "//include/nlohmann_json",
    ]

    lib_dirs = [ "//lib" ]

    if (is_win) {
      libs = [
        "rte_runtime.dll.lib",
      ]
    } else {
      libs = [
        "rte_runtime",
      ]
    }
  }
}
