#
#
# Agora Real Time Engagement
# Created by Wei Hu in 2022-11.
# Copyright (c) 2024 Agora IO. All rights reserved.
#
#
import("//build/feature/ten_package.gni")

ten_package("default_app_go") {
  package_kind = "app"
  enable_build = false

  resources = [
    "manifest.json",
    "property.json",
  ]
}
