#
#
# Agora Real Time Engagement
# Created by Wei Hu in 2022-11.
# Copyright (c) 2024 Agora IO. All rights reserved.
#
#
import("//exts/rte/base_options.gni")
import("//exts/rte/rte_package.gni")

config("common_config") {
  defines = common_defines
  include_dirs = common_includes
  cflags = common_cflags
  cflags_c = common_cflags_c
  cflags_cc = common_cflags_cc
  cflags_objc = common_cflags_objc
  cflags_objcc = common_cflags_objcc
  libs = common_libs
  lib_dirs = common_lib_dirs
  ldflags = common_ldflags
}

rte_package("azure_tts") {
  package_type = "develop"  # develop | release
  package_kind = "extension"

  manifest = "manifest.json"
  property = "property.json"

  if (package_type == "develop") {
    # It's 'develop' package, therefore, need to build the result.
    build_type = "shared_library"

    sources = [ 
      "src/main.cc",
      "src/tts.cc"
    ]

    include_dirs = [
      "//include/microsoft/c_api",
      "//include/microsoft/cxx_api",
      "//include",
      "//include/utils",
      "//include/nlohmann_json",
      "//include/msgpackc",
    ]

    lib_dirs = [ "//lib", "lib" ]

    if (is_win) {
      libs = [
        "rte_runtime.dll.lib",
        "utils.dll.lib",
      ]
    } else {
      libs = [
        "rte_runtime",
        "utils",
      ]

      if (is_linux) {
        libs += [ 
          "Microsoft.CognitiveServices.Speech.core",
          "Microsoft.CognitiveServices.Speech.extension.audio.sys",
          "Microsoft.CognitiveServices.Speech.extension.codec",
          "Microsoft.CognitiveServices.Speech.extension.kws.ort",
          "Microsoft.CognitiveServices.Speech.extension.kws",
          "Microsoft.CognitiveServices.Speech.extension.lu",
          "Microsoft.CognitiveServices.Speech.extension.mas"
        ]
      }
    }
  }
}
