#
#
# Agora Real Time Engagement
# Created by Wei Hu in 2022-11.
# Copyright (c) 2024 Agora IO. All rights reserved.
#
#
import("//build/feature/ten_package.gni")

ten_package("example_tool_python") {
  package_kind = "extension"

  resources = [
    "__init__.py",
    "addon.py",
    "extension.py",
    "log.py",
    "manifest.json",
    "property.json",
  ]
}
