#
#
# Agora Real Time Engagement
# Created by Wei Hu in 2022-11.
# Copyright (c) 2024 Agora IO. All rights reserved.
#
#
import("//build/feature/ten_package.gni")

ten_package("fashionai") {
  package_kind = "extension"

  resources = [
    "__init__.py",
    "manifest.json",
    "property.json",
    "src/__init__.py",
    "src/addon.py",
    "src/extension.py",
    "src/log.py",
  ]
}
